--- a/src/pages/Subscribe/subscribe.css
+++ b/src/pages/Subscribe/subscribe.css
@@ -95,6 +95,18 @@ section > .step-by-step > .step > p {
     display: flex;
     flex-direction: column;
     gap: 10px;
+    transform: translateY(-20%);
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.2s, visibility 0.2s, transform 0.2s;
+}
+
+.s-open {
+    opacity: 1;
+    visibility: visible;
+    position: unset;
+    transform: translateX(0);
 }
 
 .item-container {
@@ -274,7 +286,12 @@ section > .step-by-step > .step > p {
     }
     .s-items {
         flex-direction: row;
+        transform: translateX(50%);
     }
+    .s-open {
+        transform: translateX(0);
+    }
+
     .item-container {
         height: 250px;
     } 
