--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -11,6 +11,12 @@
     background-color: grey;
     cursor: not-allowed;
 }
+.arrow-icon {
+    transition: all 0.3s;
+}
+.arrow-upside {
+    transform: rotate(-180deg);
+}
 
 @media screen and (min-width: 1024px) {
     .button-style:not(:disabled):hover {
